# deepharness-ent-desktop

./: .env  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  REVIEW.md  TODO.md  biome.json  crawl_1688_product.py  historical_context.txt  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-desktop.sh  snapshot.js  tailwind.config.js  vite.config.dev.ts  vite.config.ts
.github/workflows/: release-dh.yml
.rules/: check.sh  testBuild.sh
.skills/accurate-ocr/: SKILL.md
.skills/ai-ppt-generator/: SKILL.md
.skills/air-ticket-ocr/: SKILL.md
.skills/baidu-ai-search/: SKILL.md
.skills/baidu-encyclopedia/: SKILL.md
.skills/baidu-geocoding/: SKILL.md
.skills/baidu-ip-geolocation/: SKILL.md
.skills/baidu-poi-detail/: SKILL.md
.skills/baidu-poi-multidim-search/: SKILL.md
.skills/baidu-region-search/: SKILL.md
.skills/baidu-search/: SKILL.md
.skills/baidu-seo-keyword-ranking/: SKILL.md
.skills/baidu-traffic-condition/: SKILL.md
.skills/baidu-weather-query/: SKILL.md
.skills/bus-ticket-ocr/: SKILL.md
.skills/company-hiring-data/: SKILL.md
.skills/company-info-lookup/: SKILL.md
.skills/currency-exchange-rate/: SKILL.md
.skills/document-format-conversion/: SKILL.md
.skills/driving-exam-questions/: SKILL.md
.skills/enterprise-three-factor-auth/: SKILL.md
.skills/face-comparison/: SKILL.md
.skills/face-recognition/: SKILL.md
.skills/gemini-image-editing/: SKILL.md
.skills/id-card-ocr/: SKILL.md
.skills/id-card-two-factor-auth/: SKILL.md
.skills/image-generation-advanced/: SKILL.md
.skills/image-generation-super/: SKILL.md
.skills/image-to-video/: SKILL.md
.skills/isbn-lookup/: SKILL.md
.skills/kling-image-expand/: SKILL.md
.skills/kling-image-to-video/: SKILL.md
.skills/kling-omni-image-generation/: SKILL.md
.skills/kling-video-generation/: SKILL.md
.skills/long-text-tts/: SKILL.md
.skills/lottery-draw-query/: SKILL.md
.skills/minimax-chat/: SKILL.md
.skills/minimax-image-to-image/: SKILL.md
.skills/minimax-image-to-video/: SKILL.md
.skills/minimax-subject-to-video/: SKILL.md
.skills/minimax-text-to-image/: SKILL.md
.skills/minimax-text-to-video/: SKILL.md
.skills/minimax-tts/: SKILL.md
.skills/multimodal-llm/: SKILL.md
.skills/object-scene-recognition/: SKILL.md
.skills/patent-search/: SKILL.md
.skills/phone-location-lookup/: SKILL.md
.skills/precious-metal-kline/: SKILL.md
.skills/realtime-express-tracking/: SKILL.md
.skills/rideshare-receipt-ocr/: SKILL.md
.skills/route-planning/: SKILL.md
.skills/short-speech-recognition/: SKILL.md
.skills/short-text-tts/: SKILL.md
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/commands/: chat.rs  config.rs  config_layer.rs  detect.rs  exec.rs  gatewayd.rs  gatewayd_support.rs  mcp.rs  mod.rs
apps/cli/src/wrapper/: agent_config.rs  env_injector.rs  mod.rs  process_manager.rs
apps/gatewayd/: Cargo.toml
apps/gatewayd/src/: agents_impl.rs  agui_sink.rs  audit.rs  main.rs  mcp_aggregator.rs  session.rs
apps/gatewayd/src/agui/: mapper.rs  mod.rs  types.rs
apps/gatewayd/src/handlers/: mod.rs  session.rs  sse.rs  websocket.rs
apps/gatewayd/src/reporter/: config.rs  exporter.rs  mod.rs  poller.rs  queue.rs  tests.rs  transform.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: error.rs  event_sink.rs  instance.rs  instance_registry.rs  lib.rs  logger.rs  mcp.rs  models.rs  plugin.rs  plugin_registry.rs  service.rs  session_map.rs
crates/agent-core/src/process/: event.rs  http.rs  mapper.rs  mod.rs  stdio.rs  transport.rs  util.rs
crates/claude-plugin/: Cargo.toml
crates/claude-plugin/src/: constants.rs  instance.rs  lib.rs  parser.rs  plugin.rs
crates/codex-plugin/: Cargo.toml
crates/codex-plugin/src/: client.rs  constants.rs  instance.rs  lib.rs  parser.rs  plugin.rs
crates/dh-config/: Cargo.toml
crates/dh-config-adapter/: Cargo.toml
crates/dh-config-adapter/src/: adapter.rs  apply.rs  constants.rs  diff.rs  error.rs  io.rs  lib.rs  types.rs
crates/dh-config-adapter/src/claudecode/: memory.rs  mod.rs  paths.rs  settings.rs
crates/dh-config/src/: constants.rs  error.rs  expand.rs  lib.rs  loader.rs  merge.rs  placeholder.rs  schema.rs  validate.rs
crates/dh-db/: Cargo.toml
crates/dh-db/src/: connection.rs  lib.rs  reporter_db.rs  schema.rs
crates/dh-db/src/desktop/: agent_repository.rs  app_repository.rs  mod.rs
crates/dh-platform/: Cargo.toml
crates/dh-platform/src/: fs.rs  ipc.rs  lib.rs  notify.rs
crates/opencode-plugin/: Cargo.toml
crates/opencode-plugin/src/: instance.rs  lib.rs  mapper.rs  mcp_adapter.rs  parser.rs  plugin.rs  transport.rs
docs/: prd.md
npm/: .gitignore  .npmignore  README.md  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx  routes.tsx
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/agent-core/: Cargo.toml
src-tauri/crates/agent-core/src/: error.rs  event.rs  instance.rs  lib.rs  logger.rs  plugin.rs
src-tauri/crates/agent-core/src/mcp/: client.rs  codec.rs  mod.rs  protocol.rs  transport.rs
src-tauri/crates/agent-runtime/: Cargo.toml
src-tauri/crates/agent-runtime/src/: health_check.rs  lib.rs  process.rs
src-tauri/crates/opencode-plugin/: Cargo.toml
src-tauri/crates/opencode-plugin/src/: instance.rs  lib.rs  mapper.rs  parser.rs  plugin.rs
src-tauri/icons/: icon.icns
src-tauri/src/: agent_db.rs  agent_service.rs  event_sink.rs  lib.rs  main.rs  sidecar_manager.rs
src-tauri/src/commands/: agent.rs  db.rs  git.rs  mod.rs  session_log.rs  system.rs  workspace.rs
src-tauri/src/gateway/: codec.rs  connection.rs  mod.rs  router.rs  server.rs  session_manager.rs
src-tauri/src/gateway/handlers/: agent.rs  db.rs  mod.rs  session.rs  streaming.rs
src-tauri/src/mcp/: client.rs  mod.rs  types.rs
src-tauri/src/models/: agent.rs  event.rs  interaction.rs  log.rs  mod.rs
src-tauri/src/service/: agent_service.rs  db_service.rs  instance_registry.rs  mod.rs  opencode_service.rs  plugin_registry.rs
src-tauri/src/setup/: db.rs  window.rs
(+275 files in other folders)
