[workspace]
members = [
    "crates/dh-core",
    "crates/dh-platform",
    "crates/dh-db",
    "crates/agent-core",
    "crates/opencode-plugin",
    "apps/gatewayd",
    "apps/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DeepHarness Team"]
license = "MIT"
repository = "https://github.com/deepharness/deepharness"

[workspace.dependencies]
tokio = { version = "1.43", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16", features = ["v4", "serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
notify-rust = "4.11"
dirs = "6.0"
libc = "0.2"
sha2 = "0.10"
hex = "0.4"
hostname = "0.4"
