[package]
name = "ai-coding-desktop"
version = "0.0.1"
description = "DeepHarness Desktop App"
authors = ["you"]
edition = "2021"

[workspace]
members = ["crates/*"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time", "macros"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
futures-util = "0.3"
base64 = "0.22"

# workspace crates
agent-core = { path = "crates/agent-core" }
agent-runtime = { path = "crates/agent-runtime" }
opencode-plugin = { path = "crates/opencode-plugin" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[dependencies.env_logger]
version = "0.11"
