[package]
name = "dh-desktop"
version = "0.0.1"
description = "dh-desktop"
authors = ["you"]
edition = "2021"

[workspace]
members = []
resolver = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.34", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time", "macros"] }
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json", "stream"] }
log = "0.4"
futures-util = "0.3"
base64 = "0.22"

# workspace crates
agent-core = { path = "../crates/agent-core" }
opencode-plugin = { path = "../crates/opencode-plugin" }
dh-db = { path = "../crates/dh-db" }

[features]
custom-protocol = ["tauri/custom-protocol"]

[lints.rust]
unused = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cognitive_complexity = "warn"
too_many_arguments = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies.env_logger]
version = "0.11"
