[package]
name = "deepharness-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dh"
path = "src/main.rs"

[dependencies]
dh-platform = { path = "../../crates/dh-platform" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
clap.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
