[package]
name = "deepharness-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "dh"
path = "src/main.rs"

[dependencies]
dh-platform = { path = "../../crates/dh-platform" }
dh-db = { path = "../../crates/dh-db" }
dh-config = { path = "../../crates/dh-config" }
dh-config-adapter = { path = "../../crates/dh-config-adapter" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
clap.workspace = true
uuid.workspace = true
dirs.workspace = true
toml.workspace = true

futures-util = "0.3"
tokio-tungstenite = "0.29"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Threading"] }
