[package]
name = "gatewayd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "gatewayd"
path = "src/main.rs"

[dependencies]
dh-core = { path = "../../crates/dh-core" }
dh-platform = { path = "../../crates/dh-platform" }
dh-db = { path = "../../crates/dh-db" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
rusqlite.workspace = true
