[package]
name = "codex-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
async-trait = "0.1"
futures-util = "0.3"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time", "macros"] }

[dev-dependencies]
tokio-test = "0.4"
