[package]
name = "dh-config-adapter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
dh-config = { path = "../dh-config" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3.10"
