[package]
name = "dh-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3.10"
