[package]
name = "dh-platform"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["net", "fs"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
dirs.workspace = true
notify-rust = { version = "4.11", optional = true }

[features]
default = ["notify"]
notify = ["dep:notify-rust"]
