[package]
name = "opencode-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
tokio = { version = "1", features = ["rt", "sync", "process", "io-util", "time"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
log = "0.4"
