[package]
name = "agent-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt", "sync", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"
async-trait = "0.1"
thiserror = "1"
