[package]
name = "opencode-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
agent-core = { path = "../agent-core" }
agent-runtime = { path = "../agent-runtime" }
tokio = { version = "1", features = ["rt", "sync", "process", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2" }
async-trait = "0.1"
